chore: make Sonar happy